[package]
name = "rust-study"
version = "0.1.0"
authors = ["Yuta Sakamaki <yuta_sakamaki@albert2005.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "2.0", features = ['rustls'] }
actix-rt = "1.0"
actix-http = "1.0"
awc = "1.0"
envy = "0.4.1"

log = "0.4.8"
env_logger = "0.7.1"

reqwest = { version = "0.10", features = ["json"] }

listenfd = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

uuid = { version = "0.8", features = ["v4", "serde"] }

sha2 = "0.8.2"
hmac = "0.7.1"
base64 = "0.12.1"
